--- a/Gallery.html
+++ b/Gallery.html
@@ -30,7 +30,7 @@
                 In Game Screenshot
             </h3>
             <div id="foto">
-                <img src="../assets/25_samsho01.jpg" alt="">
+                <img src="./assets/25_samsho01.jpg" alt="">
             </div>
         </div>
         <div class="colum">
@@ -38,7 +38,7 @@
                 In Game Screenshot
             </h3>
             <div id="foto" >
-                <img src="../assets/apps.10199.13709121872458968.deb46de7-0b2b-44a9-8c96-dfe1c1ae6b2f.jpg" alt="">
+                <img src="./assets/apps.10199.13709121872458968.deb46de7-0b2b-44a9-8c96-dfe1c1ae6b2f.jpg" alt="">
             </div>
         </div>
         <div class="colum">
@@ -46,7 +46,7 @@
                 In Game Screenshot
             </h3>
             <div id="foto">
-                <img src="../assets/samsho2019-screenshot7.jpg" alt="">
+                <img src="./assets/samsho2019-screenshot7.jpg" alt="">
             </div>
         </div>
     </div>
